--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,11 @@ header {
     background-color: transparent;
     -webkit-appearance:none;
     border-radius: 0% !important;
-    caret-color: white;
+    caret-color: white !important;
+    color: white !important;
+    font-family: Poppins-ExtraLight !important;
+    font-weight: 200;
+    font-size: 16px;
     padding-left: 0px;
 }
 
