--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: 'Play';
-    src: url('./fonts/Play-Regular.ttf') format('truetype');
+    src: url('../fonts/Play-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -17,5 +17,5 @@
 
 /* @font-face kit by Fonts2u (https://fonts2u.com) */
 @font-face {font-family:"Play-Bold";
-    src:url("./fonts/Play-Bold.ttf") format("truetype");
+    src:url("../fonts/Play-Bold.ttf") format("truetype");
     font-weight:normal;font-style:normal;}
