--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,10 @@
+.navbar-nav {
+    align-items: center;
+}
+.navbar-nav>:not(:last-child){
+    margin: 0px 10px 0px 0px;
+}
+
 .nav-element {
     color: rgb(85, 110, 108) !important; 
     border: none !important;
