--- a/src/css/CategoryCard.css
+++ b/src/css/CategoryCard.css
@@ -3,12 +3,12 @@
     max-width: 240px !important;
     text-align: center;
 }
-.category-card>.card-img-top {
+.category-card .card-img-top {
     max-width: 100%;
     height: 210px;
     width: 210px;
     object-fit: scale-down;
 }
-.category-card>.card-body {
+.category-card .card-body {
     padding: 7px 0px 7px 0px;
 }
