--- a/src/css/ProjectCard.css
+++ b/src/css/ProjectCard.css
@@ -7,3 +7,8 @@
     text-align: center;
     color: rgb(85, 110, 108)
 }
+
+.project-modal .modal-content {
+    background-color: transparent !important;
+    border: none;
+}
